--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 :root{
-    --tenne-tawny: #d65108;
-    --tenne-tawny-dark: #b54507;
+    --tenne-tawny: #4908d6;
+    --tenne-tawny-dark: #2407b5;
 }
 body{
     font-weight: 300;
